--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Free thought'
 - !lcc 'BL'
+- GITenberg
 title: "The Project Gutenberg Collection of Works by Freethinkers\r\nWith Linked On-line\
   \ and Off-line Indexes to 157 Volumes by 90 Authors; Plus Indexes to 15 other Author's\
   \ Multi-Volume Sets."
